server/compilers/goLiteJS/src/test/ml2/valid/arg5.go
// formal parameter shares name with function
package main

func f(f int) int {
    return f
}
