server/compilers/goLiteJS/src/test/ml2/invalid/func4.go
// return value does not type check
package main

func f() int {
    return 
}

func main() {
    f()
}
